<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adult_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ad"
            app:layout_constraintBottom_toTopOf="@+id/minAd"
            app:layout_constraintEnd_toEndOf="@+id/minAd"
            app:layout_constraintHorizontal_bias="0.581"
            app:layout_constraintStart_toStartOf="@+id/minAd"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/minAd"
            style="@style/Button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="remAdult"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/adult"
            app:layout_constraintEnd_toEndOf="@+id/adult"
            app:layout_constraintStart_toStartOf="@+id/adult"
            app:layout_constraintTop_toBottomOf="@+id/adult_title" />

        <TextView
            android:id="@+id/adult"
            style="@style/Text_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toTopOf="@+id/plusAd"
            app:layout_constraintEnd_toEndOf="@+id/plusAd"
            app:layout_constraintStart_toStartOf="@+id/plusAd"
            app:layout_constraintTop_toBottomOf="@+id/minAd" />

        <Button
            android:id="@+id/plusAd"
            style="@style/Button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adult" />

        <TextView
            android:id="@+id/Immature"
            style="@style/Text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/imm"
            app:layout_constraintBottom_toTopOf="@+id/immMin"
            app:layout_constraintEnd_toEndOf="@+id/immMin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/immMin"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/immMin"
            style="@style/Button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="remImmatures"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/countImm"
            app:layout_constraintEnd_toEndOf="@+id/countImm"
            app:layout_constraintStart_toStartOf="@+id/countImm"
            app:layout_constraintTop_toBottomOf="@+id/Immature" />

        <TextView
            android:id="@+id/countImm"
            style="@style/Text_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toTopOf="@+id/plusImm"
            app:layout_constraintEnd_toEndOf="@+id/plusImm"
            app:layout_constraintStart_toStartOf="@+id/plusImm"
            app:layout_constraintTop_toBottomOf="@+id/immMin" />

        <Button
            android:id="@+id/plusImm"
            style="@style/Button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="addImmatures"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/countImm"
            app:layout_constraintVertical_bias="0.488" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="455dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.445" />

        <TextView
            android:id="@+id/subad"
            style="@style/Button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            app:layout_constraintBottom_toTopOf="@+id/minSub"
            app:layout_constraintEnd_toEndOf="@+id/minSub"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/minSub"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <Button
            android:id="@+id/minSub"
            style="@style/Button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="remSubadult"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/countSub"
            app:layout_constraintEnd_toEndOf="@+id/countSub"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/countSub"
            app:layout_constraintTop_toBottomOf="@+id/subad" />

        <TextView
            android:id="@+id/countSub"
            style="@style/Text_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toTopOf="@+id/plusSub"
            app:layout_constraintEnd_toEndOf="@+id/plusSub"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/plusSub"
            app:layout_constraintTop_toBottomOf="@+id/minSub" />

        <Button
            android:id="@+id/plusSub"
            style="@style/Button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="addSubadult"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countSub" />

        <TextView
            android:id="@+id/Juvenile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juv"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <Button
            android:id="@+id/button7"
            style="@style/Button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="remJuveniles"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/countJuv"
            app:layout_constraintEnd_toEndOf="@+id/countJuv"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/countJuv"
            app:layout_constraintTop_toBottomOf="@+id/Juvenile" />

        <TextView
            android:id="@+id/countJuv"
            style="@style/Text_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toTopOf="@+id/addJuv"
            app:layout_constraintEnd_toEndOf="@+id/addJuv"
            app:layout_constraintStart_toStartOf="@+id/addJuv"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/addJuv"
            style="@style/Button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="addJuveniles"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/countJuv" />

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/total_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="totalNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/ic_functions_black_24dp" />

        <TextView
            android:id="@+id/totals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="res"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/ic_autorenew_black_24dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/tags"
            android:inputType="text|textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/totals"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
</layout>
